--- a/DIPR.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DIPR.WebMVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
                     {
                         <li>@Html.ActionLink("Babies", "Index", "Baby")</li>
                     }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Diapers", "Index", "Diaper")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
