--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add a Baby", "Create")
 </p>
 <table class="table">
     <tr>
