--- a/DIPR.WebMVC/Views/Diaper/Delete.cshtml
+++ b/DIPR.WebMVC/Views/Diaper/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DIPR.Models.Diaper.DiaperDetails
 
 @{
-    ViewBag.Title = "DeleteDiaper";
+    ViewBag.Title = "Delete";
 }
 
-<h2>DeleteDiaper</h2>
+<h2>Delete Diaper</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
