--- a/DIPR.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DIPR.WebMVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
                     {
                         <li>@Html.ActionLink("Diapers", "Index", "Diaper")</li>
                     }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Sleep", "Index", "Sleep")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
