Views updates/clean up

--- a/DIPR.WebMVC/Views/Baby/Details.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Babies</h2>
 
 <div>
-    <h4>BabyDetail</h4>
+    <h4>Baby Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
