--- a/DIPR.WebMVC/Views/Sleep/Details.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Sleep</h2>
 
 <div>
-    <h4>SleepDetail</h4>
+    <h4>Sleep Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
