--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -4,10 +4,16 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Babies</h2>
 
 <p>
     @Html.ActionLink("Add a Baby", "Create")
+</p>
+<p>
+    @Html.ActionLink("Add a Diaper", "Create", "Diaper")
+</p>
+<p>
+    @Html.ActionLink("Add Sleep Data", "Create", "Sleep")
 </p>
 <table class="table">
     <tr>
@@ -28,28 +34,29 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
 
-    <td>
-        @Html.DisplayFor(modelItem => item.Gender)
-    </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Gender)
+            </td>
 
-    <td>
-        @Html.DisplayFor(modelItem => item.BirthDate)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Notes)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.BabyID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
-    </td>
-</tr>
-}
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Notes)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.BabyID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
+            </td>
+        </tr>
+    }
 
 </table>
