--- a/DIPR.WebMVC/Views/Diaper/Delete.cshtml
+++ b/DIPR.WebMVC/Views/Diaper/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete Diaper</h2>
+<h2>Diapers</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DiaperDetails</h4>
+    <h4>Remove Diaper Data</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +26,6 @@
         <dd>
             @Html.DisplayFor(model => model.Time)
         </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
