--- a/DIPR.WebMVC/Views/Diaper/Details.cshtml
+++ b/DIPR.WebMVC/Views/Diaper/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Diapers</h2>
 
 <div>
-    <h4>DiaperDetails</h4>
+    <h4>Diaper Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
