--- a/DIPR.WebMVC/Views/Diaper/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Diaper/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Diapers</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>DiaperEdit</h4>
+    <h4>Update Diaper Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
