added bottle functions

--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -15,6 +15,9 @@
 <p>
     @Html.ActionLink("Add Sleep Data", "Create", "Sleep")
 </p>
+<p>
+    @Html.ActionLink("Add a Bottle", "Create", "Bottle")
+</p>
 <table class="table">
     <tr>
         <th>
