--- a/DIPR.WebMVC/Views/Bottle/Create.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Bottles</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>BottleCreate</h4>
+    <h4>Add a Bottle</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -32,7 +32,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Contents, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Contents, "Select Bottle Contents", new { @class = "form-control" })
+            @Html.EnumDropDownListFor(model => model.Contents, "--Select Bottle Contents--", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
         </div>
     </div>
