--- a/DIPR.WebMVC/Views/Bottle/Details.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Bottles</h2>
 
 <div>
-    <h4>BottleDetail</h4>
+    <h4>Bottle Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
