--- a/DIPR.WebMVC/Views/Bottle/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Bottles</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>BottleEdit</h4>
+    <h4>Update Bottle Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -33,7 +33,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Contents, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EnumDropDownListFor(model => model.Contents, "--Select Bottle Contents--", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
         </div>
     </div>
