--- a/DIPR.WebMVC/Views/Nursing/Create.cshtml
+++ b/DIPR.WebMVC/Views/Nursing/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Nursing</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>NursingCreate</h4>
+    <h4>Add Nursing Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -32,7 +32,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.FeedingSide, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.FeedingSide, "Select Feeding Side", new { @class = "form-control" })
+            @Html.EnumDropDownListFor(model => model.FeedingSide, "--Select Feeding Side--", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.FeedingSide, "", new { @class = "text-danger" })
         </div>
     </div>
