--- a/DIPR.WebMVC/Views/Sleep/Create.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Create.cshtml
@@ -26,7 +26,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EnumDropDownListFor(model => model.Location, "--Select a Sleep Location--", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
         </div>
     </div>
