--- a/DIPR.WebMVC/Views/Sleep/Delete.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Delete Sleep Data</h4>
+    <h4>Sleep Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
