testing some things

--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -18,6 +18,9 @@
 <p>
     @Html.ActionLink("Add a Bottle", "Create", "Bottle")
 </p>
+<p>
+    @Html.ActionLink("Add Nursing Data", "Create", "Nursing")
+</p>
 <table class="table">
     <tr>
         <th>
