--- a/DIPR.WebMVC/Views/Bottle/Details.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Details.cshtml
@@ -20,16 +20,34 @@
         <dt>
             @Html.DisplayNameFor(model => model.Contents)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Contents)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Quantity)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Quantity)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Consumed)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Consumed)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Time)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Time)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Notes)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Notes)
         </dd>
 
     </dl>
