--- a/DIPR.WebMVC/Views/Baby/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Edit.cshtml
@@ -15,14 +15,7 @@
     <h4>Update Baby Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.BabyID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BabyID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BabyID, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
+    @Html.HiddenFor(model => model.BabyID)
     <div class="form-group">
         @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
