--- a/DIPR.WebMVC/Views/Nursing/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Nursing/Edit.cshtml
@@ -15,20 +15,14 @@
     <h4>Update Nursing Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NursingID, "", new { @class = "text-danger" })
-        </div>
+    @Html.HiddenFor(model => model.NursingID)
+<div class="form-group">
+    @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "control-label col-md-2" })
+        @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
     </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.NursingID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.NursingID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NursingID, "", new { @class = "text-danger" })
-        </div>
-    </div>
+</div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.TimeFed, htmlAttributes: new { @class = "control-label col-md-2" })
