--- a/DIPR.WebMVC/Views/Sleep/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Edit.cshtml
@@ -15,18 +15,12 @@
     <h4>Update Sleep Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.SleepID)
     <div class="form-group">
         @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.SleepID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SleepID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SleepID, "", new { @class = "text-danger" })
         </div>
     </div>
 
