bug checks and view updates

--- a/DIPR.WebMVC/Views/Baby/Details.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BabyId)
+            @Html.DisplayNameFor(model => model.BabyID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BabyId)
+            @Html.DisplayFor(model => model.BabyID)
         </dd>
 
         <dt>
