--- a/DIPR.WebMVC/Views/Baby/Delete.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Delete.cshtml
@@ -6,17 +6,17 @@
 
 <h2>Babies</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this baby?</h3>
 <div>
     <h4>Remove Baby Data</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BabyId)
+            @Html.DisplayNameFor(model => model.BabyID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BabyId)
+            @Html.DisplayFor(model => model.BabyID)
         </dd>
 
         <dt>
