--- a/DIPR.WebMVC/Content/Site.css
+++ b/DIPR.WebMVC/Content/Site.css
@@ -1,12 +1,17 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #41803C;
+    color: white;
+    /* background-image: url('../Assets/babybackground.png'); */
+    
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    color: white;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -20,5 +25,5 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 300px;
 }
