--- a/DIPR.WebMVC/Views/Bottle/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Edit.cshtml
@@ -15,18 +15,12 @@
     <h4>Update Bottle Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.BottleID)
     <div class="form-group">
         @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "control-label col-md-2" })
+            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.BottleID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BottleID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BottleID, "", new { @class = "text-danger" })
         </div>
     </div>
 
