--- a/DIPR.WebMVC/Views/Sleep/Index.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Index.cshtml
@@ -31,7 +31,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Notes)
         </th>
-        <th></th>
+        <th>
+            <p>Actions</p>
+        </th>
     </tr>
 
 @foreach (var item in Model) {
