--- a/DIPR.WebMVC/Content/Site.css
+++ b/DIPR.WebMVC/Content/Site.css
@@ -1,17 +1,14 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color: #41803C;
-    color: white;
-    /* background-image: url('../Assets/babybackground.png'); */
-    
+    background: url(../Assets/soft-wallpaper-texture.jpg) repeat;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    color: white;
+    color: #1D3557;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
