--- a/DIPR.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DIPR.WebMVC/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     {
                         <li>@Html.ActionLink("Nursing", "Index", "Nursing")</li>
                     }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Baby 101", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
