--- a/DIPR.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DIPR.WebMVC/Views/Shared/_Layout.cshtml
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/Site.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
