--- a/DIPR.WebMVC/Views/Diaper/Index.cshtml
+++ b/DIPR.WebMVC/Views/Diaper/Index.cshtml
@@ -9,6 +9,18 @@
 <p>
     @Html.ActionLink("Add a Diaper", "Create")
 </p>
+
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+        @ViewBag.SaveResult
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
+}
+
 <table class="table">
     <tr>
         <th>
@@ -30,28 +42,29 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Time)
-    </td>
-    
-    <td>
-        @Html.DisplayFor(modelItem => item.Soiled)
-    </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Time)
+            </td>
 
-    <td>
-        @Html.DisplayFor(modelItem => item.Notes)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.DiaperID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.DiaperID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.DiaperID })
-    </td>
-</tr>
-}
+            <td>
+                @Html.DisplayFor(modelItem => item.Soiled)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Notes)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.DiaperID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.DiaperID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.DiaperID })
+            </td>
+        </tr>
+    }
 
 </table>
