--- a/DIPR.WebMVC/Views/Sleep/Index.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Index.cshtml
@@ -9,6 +9,18 @@
 <p>
     @Html.ActionLink("Add Sleep Data", "Create")
 </p>
+
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+        @ViewBag.SaveResult
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
+}
+
 <table class="table">
     <tr>
 
@@ -36,33 +48,34 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
+    @foreach (var item in Model)
+    {
+        <tr>
 
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Location)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.SleepStart)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.SleepEnd)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.TotalSleep)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Notes)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.SleepID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.SleepID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.SleepID })
-    </td>
-</tr>
-}
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SleepStart)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SleepEnd)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalSleep)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Notes)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SleepID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SleepID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SleepID })
+            </td>
+        </tr>
+    }
 
 </table>
