--- a/DIPR.WebMVC/Content/bootstrap.css
+++ b/DIPR.WebMVC/Content/bootstrap.css
@@ -48,6 +48,7 @@ a {
 a:active,
 a:hover {
   outline: 0;
+
 }
 abbr[title] {
   border-bottom: none;
@@ -1104,7 +1105,7 @@ a {
     a:hover,
     a:focus {
         color: #E63946;
-        text-decoration: none;
+        font-weight: bold;
     }
 a:focus {
   outline: 5px auto -webkit-focus-ring-color;
@@ -2386,7 +2387,7 @@ th {
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
-  font-size: 15px;
+  font-size: 14px;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
@@ -4681,7 +4682,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
         -webkit-text-fill-color: transparent;
         background-size: 200% 100%;
         background-position: 100%;
-        transition: background-position 275ms ease;
+        transition: background-position 350ms ease;
         text-decoration: none;
     }
 .navbar-inverse .navbar-brand:hover,
@@ -4702,7 +4703,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
         -webkit-text-fill-color: transparent;
         background-size: 200% 100%;
         background-position: 100%;
-        transition: background-position 275ms ease;
+        transition: background-position 350ms ease;
         text-decoration: none;
     }
 .navbar-inverse .navbar-nav > li > a:hover,
@@ -5548,12 +5549,13 @@ button.list-group-item-danger.active:focus {
   line-height: 1.3;
 }
 .panel {
-  margin-bottom: 20px;
-  background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 0px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    background-color: #1D3557;
 }
 .panel-body {
   padding: 15px;
