--- a/DIPR.WebMVC/Views/Baby/Delete.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Babies</h2>
 
-<h3>Are you sure you want to remove this baby?</h3>
+<h3>Remove Baby Data</h3>
 <div>
-    <h4>Remove Baby Data</h4>
+    <h4>Are you sure you want to remove this baby and all associated data?</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
