--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -25,50 +25,60 @@
     </div>
 </div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notes)
-        </th>
-        <th>
-            <p>Actions</p>
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+        @ViewBag.SaveResult
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
+}
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Gender)
+            </th>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Notes)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.BabyID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Notes)
+            </th>
+            <th>
+                <p>Actions</p>
+            </th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Gender)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Notes)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.BabyID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
+                </td>
+            </tr>
+        }
+
+    </table>
