--- a/DIPR.WebMVC/Views/Bottle/Index.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Index.cshtml
@@ -9,6 +9,17 @@
 <p>
     @Html.ActionLink("Add a Bottle", "Create")
 </p>
+
+@if (TempData.ContainsKey("SaveResult"))
+{
+<div class="alert alert-success fade in" role="alert">
+    @ViewBag.SaveResult
+    <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+    </button>
+    @TempData["SaveResult"]
+</div>
+}
 <table class="table">
     <tr>
         <th>
@@ -34,32 +45,33 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <th>
-        @Html.DisplayFor(modelItem => item.Contents)
-    </th>
-    <td>
-        @Html.DisplayFor(modelItem => item.Time)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Quantity)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Consumed)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Notes)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.BottleID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.BottleID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.BottleID })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Contents)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Time)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Consumed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Notes)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.BottleID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.BottleID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.BottleID })
+            </td>
+        </tr>
+    }
 
 </table>
