baby 101 page/layout added

--- a/DIPR.WebMVC/Content/Site.css
+++ b/DIPR.WebMVC/Content/Site.css
@@ -26,6 +26,10 @@ textarea {
     max-width: 300px;
 }
 
-footer{
+.panel-group .panel-heading p:hover {
+    font-weight: normal !important;
+}
+
+footer {
     text-align: center !important;
 }
