--- a/DIPR.WebMVC/Views/Baby/Index.cshtml
+++ b/DIPR.WebMVC/Views/Baby/Index.cshtml
@@ -38,6 +38,10 @@
     <table class="table">
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.BabyID)
+            </th>
+
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
 
@@ -58,27 +62,30 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.BabyID)
+        </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Gender)
-                </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.BirthDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Notes)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.BabyID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
-                </td>
-            </tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Gender)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.BirthDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Notes)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.BabyID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.BabyID })
+        </td>
+    </tr>
         }
 
     </table>
