--- a/DIPR.WebMVC/Views/Home/Index.cshtml
+++ b/DIPR.WebMVC/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a>Add Data</a>
+                            <p>Add Data</p>
                         </h4>
                     </div>
                     <div>
@@ -53,7 +53,7 @@
     <div class="col-md-6">
         <h2>Baby 101</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium lobortis magna, fringilla ullamcorper arcu molestie eget. Donec maximus eros ut odio feugiat finibus. Aliquam in dictum elit, eget euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec luctus feugiat rhoncus. Praesent tempus ex eget erat iaculis, eget fermentum neque pulvinar. Suspendisse porta est eros. Aliquam vel nibh sit amet leo tristique lobortis ultricies placerat erat.</p>
-        <p><a class="btn btn-default btn-lg" href="https://localhost:44354/Home/About">Learn more</a></p>
+        <p><a class="btn btn-default btn-lg" href="https://localhost:44354/Home/About"> Go to Baby 101 &#128207;</a></p>
     </div>
     @*<div class="col-md-4">
             <h2>Web Hosting</h2>
