updates to nursing data

--- a/DIPR.WebMVC/Views/Bottle/Create.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Create.cshtml
@@ -65,6 +65,14 @@
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
+
+    <button type="button"
+            onclick="document.getElementById('dateTime').innerHTML = Date()">
+        Click to display the current Date and Time.
+    </button>
+
+    <p id="dateTime"></p>
+
 </div>
 }
 
