--- a/DIPR.WebMVC/Views/Nursing/Create.cshtml
+++ b/DIPR.WebMVC/Views/Nursing/Create.cshtml
@@ -23,6 +23,13 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(model => model.TimeFed, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TimeFed, new { htmlAttributes = new { @class = "form-control" } })
@@ -49,6 +56,14 @@
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
+
+    <button type="button"
+            onclick="document.getElementById('dateTime').innerHTML = Date()">
+        Click to display the current Date and Time.
+    </button>
+
+    <p id="dateTime"></p>
+
 </div>
 }
 
