--- a/DIPR.WebMVC/Views/Nursing/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Nursing/Edit.cshtml
@@ -16,14 +16,20 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.NursingID)
-<div class="form-group">
-    @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.BabyID, Model.Babies, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
+        </div>
     </div>
-</div>
-
+    <div class="form-group">
+        @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(model => model.TimeFed, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -51,6 +57,14 @@
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
+
+    <button type="button"
+            onclick="document.getElementById('dateTime').innerHTML = Date()">
+        Click to display the current Date and Time.
+    </button>
+
+    <p id="dateTime"></p>
+
 </div>
 }
 
