--- a/DIPR.WebMVC/Views/Nursing/Index.cshtml
+++ b/DIPR.WebMVC/Views/Nursing/Index.cshtml
@@ -27,6 +27,9 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Time)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.TimeFed)
         </th>
         <th>
@@ -42,25 +45,28 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimeFed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FeedingSide)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Notes)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.NursingID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.NursingID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.NursingID })
-            </td>
-        </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Time)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TimeFed)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FeedingSide)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Notes)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.NursingID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.NursingID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.NursingID })
+    </td>
+</tr>
     }
 
 </table>
