--- a/DIPR.WebMVC/Views/Sleep/Create.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Create.cshtml
@@ -39,7 +39,7 @@
             <p>Enter time as MM/dd/yy hh:mm AM or PM </p>
             <p>e.g. 12/15/2020 11:30 PM </p>
         </div>
-        
+
     </div>
 
     <div class="form-group">
@@ -64,6 +64,14 @@
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
+
+    <button type="button"
+            onclick="document.getElementById('dateTime').innerHTML = Date()">
+        Click to display the current Date and Time.
+    </button>
+
+    <p id="dateTime"></p>
+
 </div>
 }
 
