time picker updates

--- a/DIPR.WebMVC/Views/Bottle/Edit.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Edit.cshtml
@@ -65,13 +65,13 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-success" />
         </div>
     </div>
 
     <button type="button"
             onclick="document.getElementById('dateTime').innerHTML = Date()">
-        Click to display the current Date and Time.
+        Click to display the current date and time
     </button>
 
     <p id="dateTime"></p>
