--- a/DIPR.WebMVC/Views/Home/Contact.cshtml
+++ b/DIPR.WebMVC/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Contact</h2>
+<h4>If you require any assistance with using any of the features of DIPR, please don't hesitate to contact our support team!</h4>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    123 Main St.<br />
+    Anytown, USA 12345-6789<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    123.456.7890
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@dipr.com">support@dipr.com</a><br />
 </address>
